--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,18 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			
+			 <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<url>http://192.168.0.60:8080/manager/text</url>
+					<path>/mysite3</path>
+					<username>admin</username>
+					<password>admin</password>
+				</configuration>
+			</plugin>
+			
 
 
 		</plugins>
