--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,19 @@
 			<version>1.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- jstl -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -187,8 +200,8 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-			
-			 <plugin>
+
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
@@ -198,7 +211,7 @@
 					<password>admin</password>
 				</configuration>
 			</plugin>
-			
+
 
 
 		</plugins>
