--- a/pom.xml
+++ b/pom.xml
@@ -215,7 +215,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
-					<url>http://192.168.0.60:8080/manager/text</url>
+					<url>http://localhost:8080/manager/text</url>
 					<path>/mysite3</path>
 					<username>admin</username>
 					<password>admin</password>
